[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/book/book.gd" type="Script" id=1]
[ext_resource path="res://resources/runtime_data/runtime_data.tres" type="Resource" id=2]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="CubeMesh" id=2]
size = Vector3( 1, 1, 1 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 1, 1, 1 )

[sub_resource type="SpatialMaterial" id=4]

[sub_resource type="CubeMesh" id=5]
size = Vector3( 1, 1, 1 )

[sub_resource type="CubeMesh" id=6]
size = Vector3( 1, 1, 1 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 1.6, 0.422852, 2.24 )

[sub_resource type="Animation" id=10]
resource_name = "BookActive"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("BookMesh:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.6, 0 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("BookMesh/FrontRotationPivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -90, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BookMesh/BackRotationPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 90, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BookMesh:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 180, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BookMesh/FrontRotationPivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -90, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BookMesh/BackRotationPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 90, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BookMesh:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 180, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "BookSelected"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("BookMesh:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.6, 0 ), Vector3( 5, 0, 0 ) ]
}

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath("BookMesh:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BookMesh:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BookMesh/FrontRotationPivot:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 8.5, 0, -1.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BookMesh/FrontRotationPivot:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BookMesh/FrontRotationPivot:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BookMesh/BackRotationPivot:translation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 8.5, 0, 1.5 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("BookMesh/BackRotationPivot:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("BookMesh/BackRotationPivot:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}

[node name="Book" type="Spatial"]
script = ExtResource( 1 )
_runtime_data = ExtResource( 2 )
_animation_player = NodePath("AnimationController")

[node name="BookMesh" type="Spatial" parent="."]
transform = Transform( 0.16, 0, 0, 0, 0.16, 0, 0, 0, 0.16, 0, 0, 0 )

[node name="Spine" type="Spatial" parent="BookMesh"]
transform = Transform( 0.5, 0, 0, 0, 14, 0, 0, 0, 2.6, 9.5, 0, 0 )

[node name="Spine" type="MeshInstance" parent="BookMesh/Spine"]
mesh = SubResource( 1 )
material/0 = null

[node name="FrontRotationPivot" type="Position3D" parent="BookMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.5, 0, -1.5 )

[node name="FrontCover" type="Spatial" parent="BookMesh/FrontRotationPivot"]
transform = Transform( 20, 0, 0, 0, 28, 0, 0, 0, 2.6, -8.5, 0, 0.2 )

[node name="Cover" type="MeshInstance" parent="BookMesh/FrontRotationPivot/FrontCover"]
transform = Transform( 1, 0, 0, 0, -8.74228e-09, -1, 0, 0.2, -4.37114e-08, 0, 0, -0.4 )
mesh = SubResource( 2 )
material/0 = null

[node name="Pages" type="MeshInstance" parent="BookMesh/FrontRotationPivot/FrontCover"]
transform = Transform( 0.95, 0, 0, 0, -4.15258e-08, -0.95, 0, 0.95, -4.15258e-08, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="BackRotationPivot" type="Position3D" parent="BookMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.5, 0, 1.5 )

[node name="BackCover" type="Spatial" parent="BookMesh/BackRotationPivot"]
transform = Transform( 20, 0, 0, 0, 28, 0, 0, 0, -2.6, -8.5, 0, -0.2 )

[node name="Cover" type="MeshInstance" parent="BookMesh/BackRotationPivot/BackCover"]
transform = Transform( 1, 0, 0, 0, -8.74228e-09, -1, 0, 0.2, -4.37114e-08, 0, 0, -0.4 )
mesh = SubResource( 5 )
material/0 = null

[node name="Pages" type="MeshInstance" parent="BookMesh/BackRotationPivot/BackCover"]
transform = Transform( 0.95, 0, 0, 0, -4.15258e-08, -0.95, 0, 0.95, -4.15258e-08, 0, 0, 0 )
mesh = SubResource( 6 )
material/0 = SubResource( 4 )

[node name="SelectableArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="SelectableArea"]
transform = Transform( 1, 0, 0, 0, 1, -3.55271e-15, 0, 3.55271e-15, 1, 0, 0, 0 )
shape = SubResource( 7 )

[node name="AnimationController" type="AnimationPlayer" parent="."]
anims/BookActive = SubResource( 10 )
anims/BookClose = SubResource( 8 )
anims/BookOpen = SubResource( 9 )
anims/BookSelected = SubResource( 12 )
anims/Origin = SubResource( 11 )
[connection signal="input_event" from="SelectableArea" to="." method="_on_SelectableArea_input_event"]
[connection signal="mouse_entered" from="SelectableArea" to="." method="_on_SelectableArea_mouse_entered"]
[connection signal="mouse_exited" from="SelectableArea" to="." method="_on_SelectableArea_mouse_exited"]
